--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "istrail-website",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/react": "^2.2.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "@types/react": "^18.2.13",
-    "@types/react-dom": "^18.2.6",
-    "astro": "^2.6.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "daisyui": "^3.1.5"
-  }
+    "name": "istrail-website",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/react": "^2.2.1",
+        "@astrojs/tailwind": "^4.0.0",
+        "@react-pdf-viewer/core": "^3.12.0",
+        "@types/react": "^18.2.13",
+        "@types/react-dom": "^18.2.6",
+        "astro": "^2.6.6",
+        "pdfjs-dist": "^3.4.120",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-pdf": "^7.1.2",
+        "tailwindcss": "^3.3.2"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.9",
+        "daisyui": "^3.1.5"
+    }
 }
