--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.10.1",
         "react-pdf": "^7.1.2",
         "tailwindcss": "^3.3.2"
     },
