--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dependencies": {
         "@astrojs/react": "^2.2.1",
         "@astrojs/tailwind": "^4.0.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@react-pdf-viewer/core": "^3.12.0",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
@@ -19,7 +22,6 @@
         "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4.10.1",
         "react-pdf": "^7.1.2",
         "tailwindcss": "^3.3.2"
     },
