--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "dependencies": {
         "@astrojs/react": "^2.2.1",
         "@astrojs/tailwind": "^4.0.0",
+        "@radix-ui/react-accordion": "^1.1.2",
         "@react-pdf-viewer/core": "^3.12.0",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
         "astro": "^2.6.6",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "lucide-react": "^0.271.0",
         "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-pdf": "^7.1.2",
-        "tailwindcss": "^3.3.2"
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss": "^3.3.2",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
