--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@astrojs/react": "^2.2.1",
         "@astrojs/tailwind": "^4.0.0",
+        "@coreui/react": "^5.0.0-alpha.3",
         "@radix-ui/react-accordion": "^1.1.2",
         "@react-pdf-viewer/core": "^3.12.0",
         "@types/react": "^18.2.13",
