--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "dependencies": {
         "@astrojs/react": "^2.2.1",
         "@astrojs/tailwind": "^4.0.0",
-        "@coreui/react": "^5.0.0-alpha.3",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.11",
+        "@mui/material": "^5.14.11",
         "@radix-ui/react-accordion": "^1.1.2",
         "@react-pdf-viewer/core": "^3.12.0",
         "@types/react": "^18.2.13",
@@ -24,6 +27,7 @@
         "pdfjs-dist": "^3.4.120",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-material-ui-carousel": "^3.4.2",
         "react-pdf": "^7.1.2",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "^3.3.2",
