--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mui/material": "^5.14.11",
         "@radix-ui/react-accordion": "^1.1.2",
         "@react-pdf-viewer/core": "^3.12.0",
+        "@ruffle-rs/ruffle": "^0.1.0-nightly.2023.9.26",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
         "astro": "^2.6.6",
