--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,77 @@
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages and Remote Server
 
 on:
-    # Trigger the workflow every time you push to the `main` branch
-    # Using a different branch name? Replace `main` with your branch’s name
-    push:
-        branches: [main]
-    # Allows you to run this workflow manually from the Actions tab on GitHub.
-    workflow_dispatch:
+  push:
+    branches: ["main", "master"]
+  workflow_dispatch:
 
-# Allow this job to clone the repo and create a page deployment
 permissions:
-    contents: read
-    pages: write
-    id-token: write
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout your repository using git
-              uses: actions/checkout@v4
-            - name: Install, build, and upload your site
-              uses: withastro/action@v2
-              # with:
-              # path: . # The root location of your Astro project inside the repository. (optional)
-              # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
-              # package-manager: yarn # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-    deploy:
-        needs: build
-        runs-on: ubuntu-latest
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        steps:
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
+      - name: Setup Ruby and Bundler
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+          bundler-cache: false
+
+      - name: Install dependencies
+        run: bundle install --verbose
+
+      - name: Build Jekyll site
+        run: |
+          bundle exec jekyll build --source . --destination ./_site --baseurl "/courses/csci2840/spring-2025"
+
+      # Upload the built site for later jobs
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: site-build
+          path: ./_site
+
+  deploy-github-pages:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download site build
+        uses: actions/download-artifact@v3
+        with:
+          name: site-build
+          path: _site
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _site  # Make sure this matches the built Jekyll output
+
+  deploy-remote:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download site build
+        uses: actions/download-artifact@v3
+        with:
+          name: site-build
+          path: _site
+
+      - name: rsync files to remote server
+        uses: burnett01/rsync-deployments@6.0.0
+        with:
+          switches: -avzr --delete --omit-dir-times
+          path: _site/
+          remote_path: ${{ vars.REMOTE_PATH }}
+          remote_host: ${{ vars.REMOTE_HOST }}
+          remote_user: ${{ vars.REMOTE_USER }}
+          remote_key: ${{ secrets.DEPT_KEY }}
