--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
               id: deployment
               uses: peaceiris/actions-gh-pages@v4
               with:
-                github_token: ${{ secrets.GITHUB_TOKEN }}
+                github_token: ${{ secrets.GH_PAT }}
                 publish_dir: dist
 
     deploy-remote:
