--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,9 @@ jobs:
       - name: Rename build folder for GitHub Pages
         run: mv dist dist-pages
 
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages-build-${{ github.run_id }}
           path: dist-pages
 
   # Build job for Remote Server deployment
@@ -67,10 +66,12 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Download GitHub Pages artifact
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: github-pages-build-${{ github.run_id }}
+          name: github-pages
           path: dist-pages
 
       - name: Deploy to GitHub Pages
